# test-bed

./: CMakeLists.txt  setupenv.ps1
assets/models/Light/: LightBulb.gltf
assets/shaders/: light-model.fs.glsl  light-model.vs.glsl  model.fs.glsl  model.vs.glsl
assets/shaders/instance-renderer/: default.fs.glsl  default.vs.glsl
implementation/: CMakeLists.txt  Model.h.h
implementation/inc/Application/: Application.h
implementation/inc/Camera/: Camera.h
implementation/inc/GeneralUtils/: AssetPath.h  AssetPath.h.in  fileutils.h  macros.h
implementation/inc/Log/: Log.h
implementation/inc/Model/: Mesh.h  Model.h  utils.h
implementation/inc/Shader/: ShaderProgram.h  utils.h
implementation/inc/SkyBox/: skybox.h  util.h
implementation/inc/Texture/: Texture2D.h  util.h
implementation/inc/Window/: Window.h
implementation/inc/gltfLoader/: Model.h  Scene.h  gltfLoader.h  gltfstructs.h
implementation/src/Application/: Application.cpp
implementation/src/Camera/: Camera.cpp
implementation/src/GeneralUtils/: fileutils.cpp  macros.cpp
implementation/src/Log/: Log.cpp
implementation/src/Model/: Mesh.cpp  Model.cpp  utils.cpp
implementation/src/Shader/: ShaderProgram.cpp  utils.cpp
implementation/src/SkyBox/: skybox.cpp  util.cpp
implementation/src/Texture/: Texture2D.cpp  util.cpp
implementation/src/Window/: Window.cpp
implementation/src/gltfLoader/: Model.cpp  Scene.cpp  (+1 more)
scripts/: utils.py
tests/instantiation-test/: CMakeLists.txt
tests/pbr-test/: CMakeLists.txt
tests/tiny-gltf-test/: CMakeLists.txt
tests/triangle-test/: CMakeLists.txt
(+11 files in other folders)
